# medium_01_celery_example

./: .env-local  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
docker/: .env-docker  Dockerfile  compose-all.yaml  compose.yaml
docker/entrypoints/: celery_entrypoint.sh  django_entrypoint.sh
example/api/: models.py  tasks.py  urls.py  views.py
example/common/celery/: exception.py  task.py
example/example/: celery_app.py  settings.py  urls.py
readme/: index.md
